# BareBonesRaytracer

./: .gitignore  BareBonesRaytracer.sln  README.md
BareBonesRaytracer/: BareBonesRaytracer.vcxproj  BareBonesRaytracer.vcxproj.filters  CMakeLists.txt  imgui.ini  main.cpp  trial.ppm
BareBonesRaytracer/include/: models.h
BareBonesRaytracer/src/: main.cpp
